--- a/templates/index.html
+++ b/templates/index.html
@@ -432,7 +432,7 @@ pre{font-family:'JetBrains Mono',monospace;font-size:11.5px;color:var(--tx2);lin
   <div class="nav-sep"></div>
   <nav class="nav-pills">
     <a class="nav-pill" href="/docs" target="_blank">API Docs</a>
-    <a class="nav-pill" href="#" onclick="return false">GitHub</a>
+    <a class="nav-pill" href="https://github.com/UtsavOpal/truthy" onclick="return false">GitHub</a>
   </nav>
   <div class="tbar-right">
     <div class="live-chip"><span class="live-dot"></span>Live</div>
