--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,10 @@
 <html lang="en" data-theme="dark">
 <head>
 <meta charset="UTF-8"/>
+<link rel="icon" type="image/x-icon" href="/static/favicon.ico"/>
+<link rel="icon" type="image/png" sizes="32x32" href="/static/favicon-32x32.png"/>
+<link rel="icon" type="image/png" sizes="16x16" href="/static/favicon-16x16.png"/>
+<link rel="apple-touch-icon" href="/static/apple-touch-icon.png"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>
 <title>TruthyAI - Your Personal Fact Verifier</title>
 <link rel="preconnect" href="https://fonts.googleapis.com"/>
